--- a/app-example-vue/package.json
+++ b/app-example-vue/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.3",
     "@capacitor/core": "2.4.3",
+    "@capacitor/ios": "^2.4.3",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "axios": "^0.21.0",
